# claw-compiler-cpp

./: -  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  Makefile.full  PROJECT_STRUCTURE.md  README.md  UPDATE_SUMMARY.md  build.sh  build_deopt_test.sh  build_jit_deopt.sh  build_package_tests.sh  claw  claw-binary-naming.claw  claw-compiler-cpp.report.md  claw-compiler-design.md  claw-event-system.md  claw-minimal-type-system.md  claw-ml-compiler-integration.md  claw-naming-model.md  claw-runtime-architecture.md  claw-syntax-update.md  claw-tensor-quickstart.md  claw_jit  code_review_status.md  core-architecture.md  debug_manifest  debug_manifest.cpp  debug_pm  debug_pm.cpp  dev_report_20260412.md  dev_report_20260412_2.md  dev_report_20260412_3.md  dev_report_20260413.md  dev_report_20260413_2.md  dev_report_20260413_3.md  dev_report_20260413_4.md  dev_report_20260413_5.md  (+85 more)
.brain/: policy.yaml
.brain/context/: current-state.md  overview.md  workflows.md
.claude/: settings.local.json
dev-reports/: 2026-04-24-jit-enhancement.md  dev_report_20260424_100.md  dev_report_20260424_176.md  dev_report_20260424_22.md  dev_report_20260424_61.md  dev_report_20260425_2056.md  dev_report_20260425_cron_387b.md  dev_report_20260425_jit_optimizer.md  dev_report_20260425_lsp.md  dev_report_20260425_riscv_jit.md  dev_report_20260426_iterator_protocol.md  dev_report_20260426_multi_target_jit.md
docs/: calculator.claw  claw-comment-syntax.md  claw-example.claw  claw-language-spec.md  claw-memory-model.md  claw-pubsub-example.claw  claw-simple-syntax.claw  claw-tensor-example.claw  claw-tensor-optimization.md  claw-type-system.md  production-roadmap.md  project-overview.md  project-workflows.md  self-modification-plan.md
src/: ast_compat.h  claw-repl-simple  claw_simple.bak  clawc  clawc_codegen  clawc_debug  clawc_final  clawc_new  clawc_old  clawc_run  clawc_test  clawc_v2  codegen_c  codegen_c.cpp  const_fold  const_fold.cpp  debug_all  debug_all.cpp  debug_all2  debug_all2.cpp  debug_assign  debug_assign.cpp  debug_assign2  debug_assign2.cpp  debug_assign3  debug_assign3.cpp  debug_ast  debug_ast.cpp  debug_ast2  debug_ast2.cpp  debug_calc  debug_calc.cpp  debug_expr  debug_expr.cpp  debug_file  debug_file.cpp  debug_fn  debug_fn.cpp  debug_fn2  debug_fn2.cpp  (+84 more)
src/ast/: ast.h  ast_compat.h  ast_serializer.cpp  ast_serializer.h
src/auto_scheduler/: auto_scheduler.cpp  auto_scheduler.h  ml_evaluator.cpp  ml_evaluator.h  schedule_cache.cpp  schedule_cache.h  schedule_space.cpp  schedule_space.h  search_strategy.cpp  search_strategy.h  vm_evaluator.cpp  vm_evaluator.h
src/backend/: cuda_codegen.cpp  cuda_codegen.h
src/benchmark/: benchmark.cpp  benchmark.h
src/bridge/: ir_bytecode_bridge.cpp  ir_bytecode_bridge.h
src/bytecode/: bytecode.cpp  bytecode.h  bytecode_compiler.cpp  bytecode_compiler.cpp.backup2  bytecode_compiler.cpp.backup_fix  bytecode_compiler.cpp.bak  bytecode_compiler.cpp.fixbackup  bytecode_compiler.cpp.fixed  bytecode_compiler.cpp.old  bytecode_compiler.h  bytecode_compiler.h.backup_20260424_163246  bytecode_compiler_compat.h  bytecode_compiler_simple.cpp  bytecode_compiler_simple.h  bytecode_executor.cpp  bytecode_executor.h  test_bc  test_bc_compiler.cpp  test_bytecode  test_bytecode.cpp
src/codegen/: c_codegen.h  codegen.cpp  codegen.h  native_codegen.cpp  native_codegen.h  simple_codegen2.h  x86_64_codegen.cpp  x86_64_codegen.h
src/common/: common.h
src/debugger/: claw_debugger.cpp  claw_debugger.h  claw_debugger_cli.cpp  claw_debugger_cli.h
src/emitter/: arm64_emitter.cpp  arm64_emitter.h  reg_alloc.cpp  reg_alloc.h  riscv_emitter.cpp  riscv_emitter.h  x86_64_emitter.cpp  x86_64_emitter.h
src/frontend/: attribute.cpp  attribute.h  diagnostics.cpp  diagnostics.h  error_recovery.cpp  error_recovery.h  parse_error_recovery.cpp  parse_error_recovery.h
src/interpreter/: interpreter.cpp  interpreter.h
src/ir/: ir.cpp  ir.h  ir_enhanced.cpp  ir_generator.cpp  ir_generator.h  ir_generator_enhanced.cpp  ir_optimizer.cpp  ir_optimizer.h
src/jit/: arm64_jit_integration.cpp  arm64_jit_integration.h  deoptimization.cpp  deoptimization.h  hot_spot.cpp  hot_spot.h  inline_cache.cpp  inline_cache.h  jit_compiler.cpp  jit_compiler.cpp.backup_20260424_114108  jit_compiler.cpp.fixed  jit_compiler.h  jit_compiler.h.fixed  jit_emitter_integration.cpp  jit_emitter_integration.cpp.broken  jit_emitter_integration.h  jit_multi_target.cpp  jit_multi_target.h  jit_riscv_integration.cpp  jit_riscv_integration.cpp.backup_20260426  jit_riscv_integration.h  jit_riscv_integration_enhanced.cpp  jit_runtime.cpp  jit_runtime.h  jit_stdlib_integration.cpp  jit_stdlib_integration.h  optimizations.cpp  optimizations.h  stack_frame.cpp  stack_frame.h  tracing_jit.cpp  tracing_jit.h  type_profiler.cpp  type_profiler.h
src/json/: json.h  json_serialization.h
src/lexer/: lexer.h  token.h
src/lsp/: lsp_main.cpp  lsp_protocol.cpp  lsp_protocol.h  lsp_server.cpp  lsp_server.h
src/ml/: feature_extractor.cpp  feature_extractor.h  ml_cost_model.cpp  ml_cost_model.h  ml_cost_model_adapter.cpp  ml_cost_model_adapter.h
src/module/: module.cpp  module.h
src/native_codegen/: native_codegen.cpp  native_codegen.h
src/package/: dependency_resolver.cpp  dependency_resolver.h  lock_file.cpp  lock_file.h  manifest_parser.cpp  manifest_parser.h  package_manager.cpp  package_manager.h
src/parser/: parser.h  parser.h.bak
src/pipeline/: execution_engine.cpp  execution_engine.h  execution_engine_enhanced.cpp  execution_pipeline.cpp  execution_pipeline.h  perf_profiler.cpp  perf_profiler.h
src/repl/: claw_repl.cpp  claw_repl.h  claw_repl_integrated.cpp  claw_repl_integrated.h  repl.cpp  repl.h
src/runtime/: claw_event.h  claw_value.h
src/semantic/: semantic_analyzer.cpp  semantic_analyzer.h
src/stdlib/: stdlib.cpp  stdlib.h  stdlib_bytecode_integration.cpp  stdlib_bytecode_integration.h
src/tensor/: tensor_ir.h
src/tensorir/: tensor_ir.cpp  tensor_ir.h  tensor_ir_generator.cpp  tensor_ir_generator.h
src/test/: integration_test.h  (+4 more)
tests/: claw_test.h  test_lexer
(+34 files in other folders)
